--- a/client/package.json
+++ b/client/package.json
@@ -1,31 +1,17 @@
 {
-  "name": "Book4You",
-  "version": "1.0.0",
-  "description": "Book4You - an online store for books.",
-  "scripts": {
-    "typings-install": "typings install",
-    "postinstall": "npm run typings-install",
-    "build": "webpack --inline --colors --progress --display-error-details --display-cached",
-    "watch": "npm run build -- --watch",
-    "server": "webpack-dev-server --inline --colors --progress --display-error-details --display-cached --port 3000  --content-base src",
-    "start": "npm run server"
-  },
-  "contributors": [
-    "Nir Galon <nirgn975@gmail.com>"
-  ],
+  "name": "bfy",
+  "version": "0.0.0",
   "license": "MIT",
-  "devDependencies": {
-    "awesome-typescript-loader": "~0.16.2",
-    "es6-promise": "3.0.2",
-    "es6-shim": "0.35.0",
-    "reflect-metadata": "0.1.2",
-    "source-map-loader": "^0.1.5",
-    "typescript": "~1.8.9",
-    "typings": "^0.7.9",
-    "webpack": "^1.12.9",
-    "webpack-dev-server": "^1.14.0",
-    "webpack-merge": "^0.8.4"
+  "angular-cli": {},
+  "scripts": {
+    "start": "ng server",
+    "postinstall": "typings install",
+    "lint": "tslint \"src/**/*.ts\"",
+    "test": "ng test",
+    "pree2e": "webdriver-manager update",
+    "e2e": "protractor"
   },
+  "private": true,
   "dependencies": {
     "@angular/common": "2.0.0-rc.1",
     "@angular/compiler": "2.0.0-rc.1",
@@ -33,20 +19,26 @@
     "@angular/http": "2.0.0-rc.1",
     "@angular/platform-browser": "2.0.0-rc.1",
     "@angular/platform-browser-dynamic": "2.0.0-rc.1",
-    "@angular/platform-server": "2.0.0-rc.1",
     "@angular/router": "2.0.0-rc.1",
-    "@angular/router-deprecated": "2.0.0-rc.1",
-    "core-js": "^2.2.0",
-    "ng2-bootstrap": "^1.0.16",
+    "es6-shim": "^0.35.0",
+    "reflect-metadata": "0.1.3",
     "rxjs": "5.0.0-beta.6",
-    "zone.js": "~0.6.12"
+    "systemjs": "0.19.26",
+    "zone.js": "^0.6.12"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/nirgn975/Book4You"
-  },
-  "bugs": {
-    "url": "https://github.com/nirgn975/Book4You/issues"
-  },
-  "homepage": "https://github.com/nirgn975/Book4You#readme"
+  "devDependencies": {
+    "angular-cli": "^1.0.0-beta.5",
+    "codelyzer": "0.0.19",
+    "ember-cli-inject-live-reload": "^1.4.0",
+    "jasmine-core": "^2.4.1",
+    "jasmine-spec-reporter": "^2.4.0",
+    "karma": "^0.13.15",
+    "karma-chrome-launcher": "^0.2.3",
+    "karma-jasmine": "^0.3.8",
+    "protractor": "^3.3.0",
+    "ts-node": "^0.5.5",
+    "tslint": "^3.6.0",
+    "typescript": "^1.8.10",
+    "typings": "^0.8.1"
+  }
 }
