--- a/server/build.gradle
+++ b/server/build.gradle
@@ -22,6 +22,7 @@ repositories {
 dependencies {
     compile 'org.springframework.boot:spring-boot-starter-data-rest'
     compile 'org.springframework.boot:spring-boot-starter-data-jpa'
-    compile 'com.h2database:h2'
+    compile 'postgresql:postgresql:9.4-1208.jdbc4'
+//    compile 'com.h2database:h2'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
