--- a/server/build.gradle
+++ b/server/build.gradle
@@ -22,7 +22,10 @@ repositories {
 dependencies {
     compile 'org.springframework.boot:spring-boot-starter-data-rest'
     compile 'org.springframework.boot:spring-boot-starter-data-jpa'
-    compile 'postgresql:postgresql:9.4-1208.jdbc4'
+    // https://mvnrepository.com/artifact/postgresql/postgresql
+    compile group: 'postgresql', name: 'postgresql', version: '9.1-901-1.jdbc4'
+
+
 //    compile 'com.h2database:h2'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
