--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -13,8 +13,8 @@ spring.datasource.password=postgres
 spring.datasource.url= jdbc:postgresql://localhost:5432/book_for_you
 
 spring.datasource.platform=postgres
-spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 server.port=8080
 
 #
