--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,6 +1,4 @@
-#
-# [ Database Configuration Section ]
-#
+## [ Database Configuration Section ]
 
 # The name of your JDBC driver
 spring.database.driverClassName=org.postgresql.Driver
@@ -17,6 +15,4 @@ spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=create-drop
 server.port=8080
 
-#
-# [ Other Configuration Attributes ]
-#
+## [ Other Configuration Attributes ]
