--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,1 +1,23 @@
+#
+# [ Database Configuration Section ]
+#
+
+# The name of your JDBC driver
+spring.database.driverClassName=org.postgresql.Driver
+
+# The database username and password
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+
+# The JDBC URL
+spring.datasource.url= jdbc:postgresql://localhost:5432/book_for_you
+
+spring.datasource.platform=postgres
+#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
+server.port=8080
+
+#
+# [ Other Configuration Attributes ]
+#
 spring.data.rest.basePath = /api/v1
