--- a/server/build.gradle
+++ b/server/build.gradle
@@ -6,7 +6,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath('org.springframework.boot:spring-boot-gradle-plugin:1.3.3.RELEASE')
+        classpath('org.springframework.boot:spring-boot-gradle-plugin:1.3.6.RELEASE')
     }
 }
 
@@ -22,6 +22,7 @@ repositories {
 dependencies {
     compile 'org.springframework.boot:spring-boot-starter-data-rest'
     compile 'org.springframework.boot:spring-boot-starter-data-jpa'
-    compile 'com.h2database:h2'
+    // https://mvnrepository.com/artifact/postgresql/postgresql
+    compile group: 'postgresql', name: 'postgresql', version: '9.1-901-1.jdbc4'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
