--- a/server/build.gradle
+++ b/server/build.gradle
@@ -22,6 +22,7 @@ repositories {
 dependencies {
     compile 'org.springframework.boot:spring-boot-starter-data-rest'
     compile 'org.springframework.boot:spring-boot-starter-data-jpa'
+    compile 'org.springframework.boot:spring-boot-starter-security'
     // https://mvnrepository.com/artifact/postgresql/postgresql
     compile group: 'postgresql', name: 'postgresql', version: '9.1-901-1.jdbc4'
     testCompile group: 'junit', name: 'junit', version: '4.11'
