--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,7 @@
     "@angular/http": "2.0.0-rc.4",
     "@angular/platform-browser": "2.0.0-rc.4",
     "@angular/platform-browser-dynamic": "2.0.0-rc.4",
-    "@angular/router": "3.0.0-alpha.8",
+    "@angular/router": "3.0.0-beta.2",
     "es6-shim": "^0.35.0",
     "reflect-metadata": "0.1.3",
     "rxjs": "5.0.0-beta.6",
@@ -27,7 +27,7 @@
     "zone.js": "^0.6.12"
   },
   "devDependencies": {
-    "angular-cli": "^1.0.0-beta.8",
+    "angular-cli": "^1.0.0-beta.10",
     "codelyzer": "0.0.19",
     "ember-cli-inject-live-reload": "^1.4.0",
     "jasmine-core": "^2.4.1",
