--- a/server/build.gradle
+++ b/server/build.gradle
@@ -4,8 +4,12 @@ version '1.0-SNAPSHOT'
 buildscript {
     repositories {
         mavenCentral()
+        maven { url "https://repo.spring.io/plugins-snapshot" }
+        maven { url "https://repo.spring.io/snapshot" }
+        maven { url "https://repo.spring.io/milestone" }
     }
     dependencies {
+        classpath "io.spring.gradle:dependency-management-plugin:0.6.0.BUILD-SNAPSHOT"
         classpath('org.springframework.boot:spring-boot-gradle-plugin:1.3.6.RELEASE')
     }
 }
