--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_script:
   - sudo add-apt-repository -y ppa:cwchien/gradle
   - sudo apt-get update
   - sudo apt-get install -y gradle
-  - gradle build
+
 
   # Install Node.js for npm and ng-cli.
   - curl -sL https://deb.nodesource.com/setup_4.x | sudo -E bash -
@@ -26,7 +26,7 @@ before_script:
 script:
   # Run the server project.
   - cd ./server
-  - java -jar target/book4you-1.0-SNAPSHOT.jar
+  - gradle bootRun&
 
   # Run the server unit tests.
 
