--- a/server/build.gradle
+++ b/server/build.gradle
@@ -11,6 +11,7 @@ buildscript {
     dependencies {
         classpath "io.spring.gradle:dependency-management-plugin:0.6.0.BUILD-SNAPSHOT"
         classpath('org.springframework.boot:spring-boot-gradle-plugin:1.3.6.RELEASE')
+        testCompile group: 'junit', name: 'junit', version: '4.11'
     }
 }
 
